# langgraph-agent-openwebui-demo

./: .gitignore  LICENSE  README.md  pyproject.toml  start.sh  test.py
langgraph_agents/agents/: data_analyst.py
langgraph_agents/tools/: local_python_executor.py
pipelines/: data_analyst.py
utils/agents/: get_tables_info.py  main.py
